--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".NewFoodActivity"></activity>
+        <activity android:name=".NewMealActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
