--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewFoodActivity"></activity>
-        <activity android:name=".NewMealActivity"></activity>
-        <activity android:name=".CalcMealActivity"></activity>
+        <activity
+            android:name=".NewFoodActivity"
+            android:label="@string/title_activity_newfood">
+        </activity>
+        <activity
+            android:name=".NewMealActivity"
+            android:label="@string/title_activity_newmeal">
+        </activity>
+        <activity
+            android:name=".CalcMealActivity"
+            android:label="@string/title_activity_calcmeal">
+        </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -21,6 +30,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".PreferencesActivity"
+            android:label="@string/title_activity_preferences"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="info.rueth.fpucalculator.MainActivity" />
         </activity>
     </application>
 
