--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
             android:label="@string/title_activity_newfood">
         </activity>
         <activity
+            android:name=".EditFoodActivity"
+            android:label="@string/title_activity_editfood">
+        </activity>
+        <activity
             android:name=".NewMealActivity"
             android:label="@string/title_activity_newmeal">
         </activity>
