--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,23 +11,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NewFoodActivity"
+            android:name=".presentation.ui.NewFoodActivity"
             android:label="@string/title_activity_newfood">
         </activity>
         <activity
-            android:name=".EditFoodActivity"
+            android:name=".presentation.ui.EditFoodActivity"
             android:label="@string/title_activity_editfood">
         </activity>
         <activity
-            android:name=".NewMealActivity"
+            android:name=".presentation.ui.NewMealActivity"
             android:label="@string/title_activity_newmeal">
         </activity>
         <activity
-            android:name=".CalcMealActivity"
+            android:name=".presentation.ui.CalcMealActivity"
             android:label="@string/title_activity_calcmeal">
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.ui.AbsorptionSchemeActivity"
+            android:label="@string/action_editabsorptionscheme">
+        </activity>
+        <activity
+            android:name=".presentation.ui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -37,12 +41,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PreferencesActivity"
+            android:name=".presentation.ui.PreferencesActivity"
             android:label="@string/title_activity_preferences"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".presentation.ui.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="info.rueth.fpucalculator.MainActivity" />
+                android:value="info.rueth.fpucalculator.presentation.ui.MainActivity" />
         </activity>
     </application>
 
