--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,6 @@ task clean(type: Delete) {
 }
 
 ext {
-    roomVersion = '1.1.1'
-    archLifecycleVersion = '1.1.1'
+    roomVersion = '2.0.0-beta01'
+    archLifecycleVersion = '2.0.0-beta01'
 }
