--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.2'
+        classpath 'com.android.tools.build:gradle:7.3.0'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -26,6 +26,6 @@ task clean(type: Delete) {
 }
 
 ext {
-    roomVersion = '2.2.6'
+    roomVersion = '2.4.3'
     archLifecycleVersion = '2.2.0'
 }
