Upgraded to mkdocs-static-i18n version 1.0.3

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,20 @@
+# Project information
 site_name: EasyFPU for Android
 site_url: https://www.rueth.info/Android-EasyFPU
-repo_url: https://github.com/UlricusR/Android-EasyFPU
+site_author: Ulrich Rüth
+site_description: >-
+  Are you a T1D patient? And would you like to easily manage complex meals? With EasyFPU no problem!
 edit_uri: edit/site-sources/docs/
 
+# Repository
+repo_name: UlricusR/Android-EasyFPU
+repo_url: https://github.com/UlricusR/Android-EasyFPU
+
+# Configuration
 theme:
   name: material
+  features:
+    - navigation.tabs
   palette:
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
@@ -25,6 +35,7 @@ theme:
   logo: assets/images/logo_white_small.png
   favicon: assets/images/favicon.png
 
+# Customization
 extra:
   social:
     - icon: fontawesome/brands/github
@@ -32,25 +43,56 @@ extra:
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/in/ulrichrueth/
 
+# Page tree
 nav:
-  - 'index.md'
-  - 'manual.md'
+  - Project Overview: https://www.rueth.info
+  - EasyFPU for iOS: https://www.rueth.info/iOS-EasyFPU/
+  - EasyFPU for Android:
+    - 'What is EasyFPU about?': 'index.md'
+    - 'User Manual': 'manual.md'
+  - EventList for Joomla: https://www.rueth.info/joomla4-eventlist/
+  - ChurchCal for Joomla: https://www.rueth.info/joomla-churchcal/
+  - Legal Notice: https://www.rueth.info/legal/
 
+# Plugins
 plugins:
   - i18n:
-      default_language: en
       languages:
-        en:
+        - locale: en
           name: English
-          site_name: EasyFPU for Android
-          homepage: https://www.rueth.info/en
-        de:
+          build: true
+          default: true
+        - locale: de
           name: Deutsch
+          build: true
           site_name: EasyFPE für Android
-          homepage: https://www.rueth.info/de
+          site_description: >-
+            Typ-1-Diabetiker? Komplexe Mahlzeiten berechnen? Mit EasyFPE kein Problem!
+          site_url: https://www.rueth.info/Android-EasyFPU/de
+          nav_translations:
+            # Tab Menu
+            Project Overview: Projektübersicht
+            EasyFPU for iOS: EasyFPE für iOS
+            EasyFPU for Android: EasyFPE für Android
+            EventList for Joomla: EventList für Joomla
+            ChurchCal for Joomla: ChurchCal für Joomla
+            Legal Notice: Impressum und Datenschutz
+            # Page Menu
+            What is EasyFPU about?: Was ist EasyFPE?
+            User Manual: Benutzerhandbuch
+          nav:
+            - Projektübersicht: https://www.rueth.info/de
+            - EasyFPE für iOS: https://www.rueth.info/iOS-EasyFPU/de/
+            - EasyFPE für Android:
+              - 'Was ist EasyFPE?': 'index.md'
+              - 'Benutzerhandbuch': 'manual.md'
+            - EventList für Joomla: https://www.rueth.info/joomla4-eventlist/de/
+            - ChurchCal für Joomla: https://www.rueth.info/joomla-churchcal/de/
+            - Impressum und Datenschutz: https://www.rueth.info/de/legal/
   - search
   - glightbox
 
+# Extensions
 markdown_extensions:
   - admonition
   - pymdownx.details
